; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/sgi-gru/extr_grutlbpurge.c_gru_alloc_notifier.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/sgi-gru/extr_grutlbpurge.c_gru_alloc_notifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mmu_notifier = type { i32 }
%struct.mm_struct = type { i32 }
%struct.gru_mm_struct = type { %struct.mmu_notifier, i32, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@gms_alloc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.mmu_notifier* (%struct.mm_struct*)* @gru_alloc_notifier to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.mmu_notifier* @gru_alloc_notifier(%struct.mm_struct* %0) #0 {
  %2 = alloca %struct.mmu_notifier*, align 8
  %3 = alloca %struct.mm_struct*, align 8
  %4 = alloca %struct.gru_mm_struct*, align 8
  store %struct.mm_struct* %0, %struct.mm_struct** %3, align 8
  %5 = load i32, i32* @GFP_KERNEL, align 4
  %6 = call %struct.gru_mm_struct* @kzalloc(i32 12, i32 %5)
  store %struct.gru_mm_struct* %6, %struct.gru_mm_struct** %4, align 8
  %7 = load %struct.gru_mm_struct*, %struct.gru_mm_struct** %4, align 8
  %8 = icmp ne %struct.gru_mm_struct* %7, null
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @ENOMEM, align 4
  %11 = sub nsw i32 0, %10
  %12 = call %struct.mmu_notifier* @ERR_PTR(i32 %11)
  store %struct.mmu_notifier* %12, %struct.mmu_notifier** %2, align 8
  br label %24

13:                                               ; preds = %1
  %14 = load i32, i32* @gms_alloc, align 4
  %15 = call i32 @STAT(i32 %14)
  %16 = load %struct.gru_mm_struct*, %struct.gru_mm_struct** %4, align 8
  %17 = getelementptr inbounds %struct.gru_mm_struct, %struct.gru_mm_struct* %16, i32 0, i32 2
  %18 = call i32 @spin_lock_init(i32* %17)
  %19 = load %struct.gru_mm_struct*, %struct.gru_mm_struct** %4, align 8
  %20 = getelementptr inbounds %struct.gru_mm_struct, %struct.gru_mm_struct* %19, i32 0, i32 1
  %21 = call i32 @init_waitqueue_head(i32* %20)
  %22 = load %struct.gru_mm_struct*, %struct.gru_mm_struct** %4, align 8
  %23 = getelementptr inbounds %struct.gru_mm_struct, %struct.gru_mm_struct* %22, i32 0, i32 0
  store %struct.mmu_notifier* %23, %struct.mmu_notifier** %2, align 8
  br label %24

24:                                               ; preds = %13, %9
  %25 = load %struct.mmu_notifier*, %struct.mmu_notifier** %2, align 8
  ret %struct.mmu_notifier* %25
}

declare dso_local %struct.gru_mm_struct* @kzalloc(i32, i32) #1

declare dso_local %struct.mmu_notifier* @ERR_PTR(i32) #1

declare dso_local i32 @STAT(i32) #1

declare dso_local i32 @spin_lock_init(i32*) #1

declare dso_local i32 @init_waitqueue_head(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
